--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "^2.28.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-private-methods": "^7.24.0",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "^11.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "nativewind": "^4.0.0",
+    "tailwindcss": "^3.4.18",
+    "typescript": "~5.9.2"
+  }
 }
